# beanhub

./: DESIGN.md  README.md  docker-compose.yml  env.rc  pyproject.toml
src/beanhub/: app.py  config.py
tests/resources/: config.json  login.example.html
