[project]
name = "beanhub"
version = "0.0.0"
description = ""
authors = [
    {name = "Norbert Szulc", email = "norbert@not7cd.net"},
]
dependencies = [
    "flask>=3.0.3",
    "authlib>=1.3.1",
    "requests>=2.32.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "none"}

[tool.pdm.scripts]
start.cmd = "flask run -p 54321"
start.env = {FLASK_APP = "beanhub.app:app", FLASK_DEBUG = "1"}
start.env_file = ".env"
